--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/native": "^6.0.2",
+    "axios": "^1.7.5",
+    "clsx": "^2.1.1",
     "expo": "~51.0.28",
     "expo-font": "~12.0.9",
     "expo-linking": "~6.3.1",
@@ -23,13 +26,17 @@
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.7",
     "expo-web-browser": "~13.0.3",
+    "lucide-react-native": "^0.436.0",
+    "nativewind": "^4.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
-    "react-native-web": "~0.19.10"
+    "react-native-svg": "15.2.0",
+    "react-native-web": "~0.19.10",
+    "tailwindcss": "^3.4.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
