--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "@react-native-async-storage/async-storage": "^2.0.0",
     "@react-navigation/native": "^6.0.2",
     "axios": "^1.7.7",
-    "clsx": "^2.1.1",
     "expo": "~51.0.28",
     "expo-constants": "~16.0.2",
     "expo-file-system": "~17.0.1",
@@ -37,6 +36,7 @@
     "react-native": "0.74.5",
     "react-native-filereader": "^1.0.6",
     "react-native-gesture-handler": "~2.16.1",
+    "react-native-network-info": "^5.2.1",
     "react-native-paper": "^5.12.5",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
