--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "expo-splash-screen": "~0.29.13",
     "expo-status-bar": "~2.0.0",
     "expo-system-ui": "~4.0.4",
+    "expo-video": "~2.0.1",
     "expo-web-browser": "~14.0.1",
     "heycheff-mobile": "file:",
     "react": "18.3.1",
@@ -38,15 +39,13 @@
     "react-native": "0.76.3",
     "react-native-filereader": "^1.0.6",
     "react-native-gesture-handler": "~2.20.2",
-    "react-native-network-info": "^5.2.1",
     "react-native-paper": "^5.12.5",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.1.0",
     "react-native-vector-icons": "^10.1.0",
     "react-native-web": "~0.19.10",
-    "react-redux": "^9.1.2",
-    "expo-video": "~2.0.1"
+    "react-redux": "^9.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
