voice assistant hook

--- a/app.json
+++ b/app.json
@@ -38,6 +38,14 @@
           "supportsBackgroundPlayback": true,
           "supportsPictureInPicture": true
         }
+      ],
+      [
+        "expo-speech-recognition",
+        {
+          "microphonePermission": "Allow Heycheff to use the microphone.",
+          "speechRecognitionPermission": "Allow Heycheff to use speech recognition.",
+          "androidSpeechServicePackages": ["com.google.android.googlequicksearchbox"]
+        }
       ]
     ],
     "experiments": {
