--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "expo-linking": "~7.0.3",
     "expo-router": "~4.0.9",
     "expo-secure-store": "~14.0.0",
+    "expo-speech-recognition": "^1.1.1",
     "expo-splash-screen": "~0.29.13",
     "expo-status-bar": "~2.0.0",
     "expo-system-ui": "~4.0.4",
