--- a/package.json
+++ b/package.json
@@ -18,35 +18,36 @@
     "@clerk/clerk-expo": "^2.2.17",
     "@expo/vector-icons": "^14.0.4",
     "@react-native-community/cli-platform-android": "^14.1.1",
-    "@react-navigation/native": "^6.0.2",
+    "@react-navigation/native": "^7.0.0",
     "@reduxjs/toolkit": "^2.3.0",
     "axios": "^1.7.7",
-    "expo": "^52.0.11",
+    "expo": "~52.0.38",
     "expo-constants": "~17.0.3",
     "expo-file-system": "~18.0.4",
     "expo-font": "~13.0.1",
-    "expo-linking": "~7.0.3",
-    "expo-router": "~4.0.9",
-    "expo-secure-store": "~14.0.0",
+    "expo-linking": "~7.0.5",
+    "expo-router": "~4.0.19",
+    "expo-secure-store": "~14.0.1",
     "expo-speech-recognition": "^1.1.1",
-    "expo-splash-screen": "~0.29.13",
-    "expo-status-bar": "~2.0.0",
-    "expo-system-ui": "~4.0.4",
-    "expo-video": "~2.0.1",
-    "expo-web-browser": "~14.0.1",
-    "heycheff-mobile": "file:",
+    "expo-splash-screen": "~0.29.22",
+    "expo-status-bar": "~2.0.1",
+    "expo-system-ui": "~4.0.8",
+    "expo-video": "~2.0.6",
+    "expo-web-browser": "~14.0.2",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "react-native": "0.76.3",
+    "react-native": "0.76.7",
     "react-native-filereader": "^1.0.6",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-paper": "^5.12.5",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "~4.1.0",
+    "react-native-screens": "~4.4.0",
     "react-native-vector-icons": "^10.1.0",
     "react-native-web": "~0.19.10",
-    "react-redux": "^9.1.2"
+    "react-redux": "^9.1.2",
+    "expo-image-picker": "~16.0.6",
+    "expo-image-manipulator": "~13.0.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -54,9 +55,12 @@
     "@types/react": "~18.3.12",
     "@types/react-test-renderer": "^18.0.7",
     "jest": "^29.2.1",
-    "jest-expo": "~52.0.2",
+    "jest-expo": "~52.0.6",
     "react-test-renderer": "18.2.0",
     "typescript": "~5.3.3"
+  },
+  "peerDependencies": {
+    "@expo/config-plugins": "~9.0.17"
   },
   "private": true
 }
