receipt to recipe + dropdown and recipe form

--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "expo-constants": "~17.0.3",
     "expo-file-system": "~18.0.4",
     "expo-font": "~13.0.1",
+    "expo-image-manipulator": "~13.0.6",
+    "expo-image-picker": "~16.0.6",
     "expo-linking": "~7.0.5",
     "expo-router": "~4.0.19",
     "expo-secure-store": "~14.0.1",
@@ -37,6 +39,7 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.7",
+    "react-native-element-dropdown": "^2.12.4",
     "react-native-filereader": "^1.0.6",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-paper": "^5.12.5",
@@ -45,9 +48,7 @@
     "react-native-screens": "~4.4.0",
     "react-native-vector-icons": "^10.1.0",
     "react-native-web": "~0.19.10",
-    "react-redux": "^9.1.2",
-    "expo-image-picker": "~16.0.6",
-    "expo-image-manipulator": "~13.0.6"
+    "react-redux": "^9.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
